upgrade screenshot and record video